--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- <maven.compiler.source>1.7</maven.compiler.source> -->
 		<!-- <maven.compiler.target>1.7</maven.compiler.target> -->
-		<junit-platform.version>1.2.0</junit-platform.version>
+		<junit-platform.version>1.6.2</junit-platform.version>
 		<junit-jupiter.version>5.6.2</junit-jupiter.version>
+		<maven.version>3.8.0</maven.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
 
+		<!--  Test runner for jUnit 4 tests, and test suites -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
@@ -31,6 +34,7 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--  Test runner for jUnit 5 -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
@@ -38,13 +42,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
-
+		<!--  The API where annotations, e.g., @Test, are defined -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -60,9 +58,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>${maven.version}</version>
 				<configuration>
-					<release>11</release>
+					<release>${java.version}</release>
 				</configuration>
 			</plugin>
 
