--- a/pom.xml
+++ b/pom.xml
@@ -18,19 +18,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- <maven.compiler.source>1.7</maven.compiler.source> -->
 		<!-- <maven.compiler.target>1.7</maven.compiler.target> -->
-		<junit-platform.version>1.6.2</junit-platform.version>
-		<junit-jupiter.version>5.6.2</junit-jupiter.version>
+		<junit-platform-suite.version>1.11.0</junit-platform-suite.version>
+		<junit-jupiter.version>5.11.0</junit-jupiter.version>
 		<maven.version>3.8.0</maven.version>
 		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
 
-		<!--  Test runner for jUnit 4 tests, and test suites -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-runner</artifactId>
-			<version>${junit-platform.version}</version>
+			<artifactId>junit-platform-suite</artifactId>
+			<version>${junit-platform-suite.version}</version>
 			<scope>test</scope>
 		</dependency>
 
